[package]
name = "MurlocVillage_Launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.83"
cxx-qt = "0.5"
cxx-qt-lib = "0.5"
image = "0.24"
qt_core = "0.5"
qt_widgets = "0.5"
sha2 = "0.11.0-pre.4"
hex = "0.4.3"
serde_json = "1.0.125"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cxx-qt-build = "0.5"