[package]
name = "WoW_Private_Server_Launcher"
version = "0.1.0"
authors = ["Andreï Balea <andrei.t.balea@kgmail.com>"]
edition = "2021"

[dependencies]
cxx = "1.0.83"
cxx-qt = "0.6.1"
cxx-qt-lib = "0.6.1"
image = "0.25.2"
qt_core = "0.5.0"
qt_widgets = "0.5"
sha2 = "0.11.0-pre.4"
hex = "0.4.3"
serde_json = "1.0.125"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
cxx-qt-build = "0.6.1"
